--- a/node-backend/public/stylesheets/style.css
+++ b/node-backend/public/stylesheets/style.css
@@ -6,3 +6,12 @@ html, body, #map {
 	height: 100%;
 	width: 100%;
 }
+
+#header {
+	display: flex;
+}
+
+#title {
+	flex-grow: 1;
+	font-size:8em;
+}
