--- a/node-backend/public/loggedin.ejs
+++ b/node-backend/public/loggedin.ejs
@@ -4,6 +4,7 @@
     <title>Streats</title>
     <link rel="stylesheet" href="stylesheets/style.css" />
     <link rel="stylesheet" href="stylesheets/leaflet.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <script
       src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"
       integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM="
@@ -13,34 +14,19 @@
       name="google-signin-client_id"
       content="1053023923235-fp3thbg8tqv6o8bmcsjvjl09p95dnnck.apps.googleusercontent.com"
     />
-    <!-- <script src="https://apis.google.com/js/platform.js" async defer></script> -->
     <script src="https://accounts.google.com/gsi/client" async defer></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   </head>
 
   <body>
-    <div id="header">
-      <div id="title">Streats</div>
-      <!-- 
-      <div
-        id="g_id_onload"
-        data-client_id="1053023923235-fp3thbg8tqv6o8bmcsjvjl09p95dnnck.apps.googleusercontent.com"
-        data-context="signin"
-        data-ux_mode="popup"
-        data-login_uri="http://localhost:3000/users"
-        data-auto_prompt="false"
-      ></div>
-
-      <div
-        class="g_id_signin"
-        data-type="standard"
-        data-shape="rectangular"
-        data-theme="outline"
-        data-text="signin_with"
-        data-size="large"
-        data-logo_alignment="left"
-      ></div> -->
-    </div>
-    <!-- <div class="g-signin2" data-onsuccess="onSignIn"></div> -->
+    <nav class="navbar navbar-light bg-light">
+      <a class="logo" href = "#">
+        <img src="streatslogo.png" width="15%" class="d-inline-block align-bottom" alt="">
+      </a>
+      <a class="navbar-brand navbar-right" href="http://localhost:3000/logout">
+        <button type="button" class="btn btn-outline-warning">Sign Out</button>
+      </a>
+    </nav>
     <div id="map"></div>
     <script src="javascripts/webmap.js" charset="utf-8"></script>
     <script src="javascripts/popups.js" charset="utf-8"></script>
@@ -48,17 +34,6 @@
     <div class="hiddenForm" style="display: none;">
 
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
   </body>
-
-  <!--
-  <script>
-    function onSignIn(googleUser) {
-      var profile = googleUser.getBasicProfile();
-      console.log("ID: " + profile.getId()); // Do not send to your backend! Use an ID token instead.
-      console.log("Name: " + profile.getName());
-      console.log("Image URL: " + profile.getImageUrl());
-      console.log("Email: " + profile.getEmail()); // This is null if the 'email' scope is not present.	}
-    }
-  </script>
-  -->
 </html>
