--- a/node-backend/public/form.ejs
+++ b/node-backend/public/form.ejs
@@ -11,7 +11,7 @@
 
 </head>
 <body>
-  <form>
+  <form action="/form" method="POST">
 
     <div class="mb-3">
       <label for="exampleFormControlInput1" class="form-label">Type</label>
@@ -34,7 +34,11 @@
     <input type="radio" name="star"/><span class="star"> </span>
     <!-- <span class="emo"> </span> -->
   </div>
-  <input type="file" accept="image/*" capture="camera">
+  <div class="mb-3">
+    <label for="formFile" class="form-label">Upload Image</label>
+    <input class="form-control" type="file" id="formFile">
+  </div>
+    <button type="submit" class="btn btn-primary">Submit</button>
   </form>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
