--- a/node-backend/public/loggedinpage.ejs
+++ b/node-backend/public/loggedinpage.ejs
@@ -35,8 +35,7 @@
       </a>
     </nav>
     <div id="map"></div>
-    <script src="javascripts/webmap.js" charset="utf-8"></script>
-    <script src="javascripts/popups.js" charset="utf-8"></script>
+    <script src="javascripts/loggedin.js" charset="utf-8"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
   </body>
 </html>
