--- a/node-backend/public/onclickformpage.ejs
+++ b/node-backend/public/onclickformpage.ejs
@@ -19,11 +19,11 @@
 
         <div class="mb-3">
           <label for="exampleFormControlInput1" class="form-label">Type</label>
-          <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="ex. Food Truck">
+          <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="ex. Food Truck">
         </div>
         <div class="mb-3">
             <label for="exampleFormControlInput1" class="form-label">Cuisine</label>
-            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="ex. Chinese">
+            <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="ex. Chinese">
         </div>
         <div class="mb-3">
           <label for="exampleFormControlTextarea1" class="form-label">Description</label>
