--- a/node-backend/public/stylesheets/form.css
+++ b/node-backend/public/stylesheets/form.css
@@ -67,7 +67,7 @@ fieldset {
   background: white;
   width: 100%;
   border-radius: 1px;
-  padding: 1em 1.5em 0.9em;
+  padding: 1em 0em em;
   margin: auto;
 }
 
