added form control class to secretdata

--- a/node-backend/public/onclickformpage.ejs
+++ b/node-backend/public/onclickformpage.ejs
@@ -115,7 +115,7 @@
             <label for="formFile" class="form-label">Upload Image</label>
             <input class="form-control" type="file" id="formFile" />
           </div>
-          <input id="secretdata" />
+          <input id="secretdata" class="form-control"/>
           <button type="submit" class="btn btn-primary">Submit</button>
         </form>
       </div>
