--- a/node-backend/public/stylesheets/form.css
+++ b/node-backend/public/stylesheets/form.css
@@ -86,6 +86,10 @@ fieldset {
   margin-top: 1em;
 }
 
-#secretdata {
+#secretdata, #secretdataLat, #secretdataLng {
   visibility: hidden;
 }
+
+/* #secretdata{
+  visibility: hidden;
+} */
