removed a console.log

--- a/node-backend/public/onclickformpage.ejs
+++ b/node-backend/public/onclickformpage.ejs
@@ -126,7 +126,7 @@
             for (let i = 0; i < 2; i++) {
               arr[i] = parseFloat(arr[i].substring(4));
             }
-            console.log(arr);
+            // console.log(arr);
             let el1 = document.getElementById("secretdataLat");
             el1.setAttribute("value", null);
             el1.value = arr[0];
