--- a/node-backend/public/onclickformpage.ejs
+++ b/node-backend/public/onclickformpage.ejs
@@ -109,9 +109,9 @@
             <label for="formFile" class="form-label">Upload Image</label>
             <input class="form-control" type="file" id="formFile" />
           </div>
-          <input id="secretdata" class="form-control" />
-          <input id="secretdataLat" class="form-control" />
-          <input id="secretdataLng" class="form-control" />
+          <input id="secretdata" name="rating" class="form-control" />
+          <input id="secretdataLat" name="lat" class="form-control" />
+          <input id="secretdataLng" name="lng" class="form-control" />
           <script>
             const url = window.location.href;
             const latStart = url.indexOf("lat");
