updated desc of type

--- a/node-backend/public/onclickformpage.ejs
+++ b/node-backend/public/onclickformpage.ejs
@@ -32,7 +32,7 @@
               class="form-control"
               id="exampleFormControlInput1"
               name="type_name"
-              placeholder="ex. Food Truck"
+              placeholder="ex. Food Truck, Food Cart"
             />
           </div>
           <div class="mb-3">
