moved images to imgs, changed food truck icon

--- a/node-backend/public/index.ejs
+++ b/node-backend/public/index.ejs
@@ -30,7 +30,7 @@
 
     <nav class="navbar navbar-light bg-light">
       <a class="logo" href = "#">
-        <img src="streatslogo.png" width="15%" class="d-inline-block align-bottom" alt="">
+        <img src="./imgs/streatslogo.png" width="15%" class="d-inline-block align-bottom" alt="">
       </a>
       <a class="navbar-brand navbar-right" href="#">
         <div id="googlesignin">
