--- a/node-backend/public/loggedinpage.ejs
+++ b/node-backend/public/loggedinpage.ejs
@@ -28,7 +28,7 @@
   <body>
     <nav class="navbar navbar-light bg-light">
       <a class="logo" href = "#">
-        <img src="streatslogo.png" width="15%" class="d-inline-block align-bottom" alt="">
+        <img src="./imgs/streatslogo.png" width="15%" class="d-inline-block align-bottom" alt="">
       </a>
       <a class="navbar-brand navbar-right" href="http://localhost:3000/logout">
         <button type="button" class="btn btn-outline-warning">Sign Out</button>
