--- a/node-backend/public/onclickformpage.ejs
+++ b/node-backend/public/onclickformpage.ejs
@@ -116,7 +116,7 @@
             <label for="formFile" class="form-label">Upload Image</label>
             <input class="form-control" type="file" id="formFile" />
           </div>
-          <input id="secretdata" name="rating" class="form-control" />
+          <input id="secretdata" name="rating" class="form-control" required/>
           <input id="secretdataLat" name="lat" class="form-control" />
           <input id="secretdataLng" name="lng" class="form-control" />
           <script>
